force-app/main/default/objects/Provisioning__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>created on behalf of sfax migration</description>
    <label>Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>