force-app/main/default/objects/Provisioning__c/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <description>created on behalf of sfax migration</description>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>