force-app/main/default/objects/Provisioning__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Created on behalf of sfax migration</description>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>