force-app/main/default/objects/Provisioning__c/fields/Company_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Company_Billing_City__c</fullName>
    <description>Company Billing City for Provisioning</description>
    <label>Company Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>