force-app/main/default/objects/Provisioning__c/fields/Company_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Billing_Country__c</fullName>
    <description>Company Billing Country for Provisioning</description>
    <label>Company Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>