force-app/main/default/objects/Provisioning__c/fields/Company_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Company_Billing_State__c</fullName>
    <description>Company Billing State for Provisioning</description>
    <label>Company Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>