force-app/main/default/objects/Provisioning__c/fields/Company_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Company_Billing_Street__c</fullName>
    <description>Company Billing Street for Provisioning</description>
    <label>Company Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>