force-app/main/default/objects/Provisioning__c/fields/Company_Fax__c.field-meta.xml
<CustomField>
    <fullName>Company_Fax__c</fullName>
    <description>Created on behalf of sfax Migration</description>
    <label>Company Fax</label>
    <type>Phone</type>
</CustomField>