force-app/main/default/objects/Provisioning__c/fields/Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry__c</fullName>
    <description>Account Industry for Provisioning</description>
    <label>Company Industry</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Behavioral Health Provider</fullName>
            </value>
            <value>
                <fullName>Healthcare Software</fullName>
            </value>
            <value>
                <fullName>Academic/ Medical School</fullName>
            </value>
            <value>
                <fullName>Billing Company</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Durable Medical Equipment</fullName>
            </value>
            <value>
                <fullName>Community Healthcare Clinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>