force-app/main/default/objects/Provisioning__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company Name for provisioning</description>
    <inlineHelpText>Account Name</inlineHelpText>
    <label>Company Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sfax: Account, Consensus: Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provisioning</relationshipLabel>
    <relationshipName>Provisioning</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>