force-app/main/default/objects/Provisioning__c/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <description>company phone for Provisioning</description>
    <label>Company Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>