force-app/main/default/objects/Provisioning__c/fields/Company_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Plan_Type__c</fullName>
    <description>Plan Type for provisioning</description>
    <label>Company Plan Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>