force-app/main/default/objects/Provisioning__c/fields/Company_Terms__c.field-meta.xml
<CustomField>
    <fullName>Company_Terms__c</fullName>
    <description>created on behalf of sfax migration</description>
    <label>Company Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
                <default>true</default>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>Net 45</fullName>
                <isActive>false</isActive>
                <label>Net 45</label>
            </value>
            <value>
                <fullName>Net 60</fullName>
                <isActive>false</isActive>
                <label>Net 60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>