force-app/main/default/objects/Provisioning__c/fields/Company_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Company_Time_Zone__c</fullName>
    <description>Company Time Zone for Provisioning</description>
    <label>Company Time Zone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EST</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>MST</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>