force-app/main/default/objects/Provisioning__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <description>Company Website for Provisioning</description>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>