force-app/main/default/objects/Provisioning__c/fields/Company_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip_Code__c</fullName>
    <description>Zip Code for provisioning</description>
    <label>Company Zip Code</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>