force-app/main/default/objects/Provisioning__c/fields/Consensus_SKU_Tier__c.field-meta.xml
<CustomField>
    <fullName>Consensus_SKU_Tier__c</fullName>
    <label>Consensus SKU/Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>Tier 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>