force-app/main/default/objects/Provisioning__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <description>Contact Email Address for Provisioning</description>
    <label>Contact Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>