force-app/main/default/objects/Provisioning__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact Name for Provisioning</description>
    <inlineHelpText>Contact Name</inlineHelpText>
    <label>Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sfax: Contact, Consensus: Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provisioning</relationshipLabel>
    <relationshipName>Provisioning</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>