force-app/main/default/objects/Provisioning__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <description>Contact Phone Number for Provisioning</description>
    <label>Contact Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>