force-app/main/default/objects/Provisioning__c/fields/Contact_Username__c.field-meta.xml
<CustomField>
    <fullName>Contact_Username__c</fullName>
    <description>Contact Username for sfax Provisioning</description>
    <label>Contact Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>