force-app/main/default/objects/Provisioning__c/fields/Customer_Extension__c.field-meta.xml
<CustomField>
    <fullName>Customer_Extension__c</fullName>
    <label>Customer Extension</label>
    <length>25</length>
    <type>Text</type>
</CustomField>