force-app/main/default/objects/Provisioning__c/fields/EHR__c.field-meta.xml
<CustomField>
    <fullName>EHR__c</fullName>
    <description>consensus provisioning</description>
    <inlineHelpText>Please provide the name of the EHR per the Kno2 EHR cheatsheet.  If the customer does not have an EHR, please indicate &quot;Paper Based&quot;</inlineHelpText>
    <label>EHR</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>