force-app/main/default/objects/Provisioning__c/fields/J2_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>J2_Customer_ID__c</fullName>
    <label>J2 Customer ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>