force-app/main/default/objects/Provisioning__c/fields/of_Sites_in_Order__c.field-meta.xml
<CustomField>
    <fullName>of_Sites_in_Order__c</fullName>
    <label># of Sites in Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>