force-app/main/default/objects/Provisioning__c/fields/Online_TOS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Online_TOS_Enabled__c</fullName>
    <description>consensus provisioning</description>
    <inlineHelpText>TOS = Terms of Service  To ensure customer locations are grouped together, please provide your internal customer ID or customer name and repeat for each location linked to the same customer account.</inlineHelpText>
    <label>Online TOS Enabled</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online (click through)</fullName>
            </value>
            <value>
                <fullName>Paper (contract)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>