force-app/main/default/objects/Provisioning__c/fields/Organization_Parent_name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Parent_name__c</fullName>
    <label>Organization Parent name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>