force-app/main/default/objects/Provisioning__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Created on behalf of sfax migration</description>
    <label>PO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>