force-app/main/default/objects/Provisioning__c/fields/Provisioning_Email__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created on behalf of Sfax Migration</description>
    <label>Provisioning Email</label>
    <type>Checkbox</type>
</CustomField>