force-app/main/default/objects/Provisioning__c/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <description>Provisioning Status for sfax provisioning</description>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>