force-app/main/default/objects/Provisioning__c/fields/Secondary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Address__c</fullName>
    <description>created on behalf of sfax migration</description>
    <label>Secondary Email Address</label>
    <type>Email</type>
</CustomField>