force-app/main/default/objects/Provisioning__c/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <description>consensus provisioning</description>
    <inlineHelpText>What is their speciality?  Primary care, cardiology, DME, etc.</inlineHelpText>
    <label>Speciality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>