force-app/main/default/objects/Provisioning__c/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <description>Subscription Term for Provisioning</description>
    <label>Subscription Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>