force-app/main/default/objects/Provisioning__c/fields/TOS__c.field-meta.xml
<CustomField>
    <fullName>TOS__c</fullName>
    <description>consensus provisioning</description>
    <inlineHelpText>TOS = Terms of Service
Please indicate if the customer has signed a paper-version of the Conensus TOS or if they need to go through the click through TOS online.</inlineHelpText>
    <label>TOS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online TOS</fullName>
            </value>
            <value>
                <fullName>Bypass Online TOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>