force-app/main/default/objects/Provisioning__c/recordTypes/consensus.recordType-meta.xml
<RecordType>
    <fullName>consensus</fullName>
    <active>true</active>
    <description>consensus provisioning</description>
    <label>consensus</label>
</RecordType>