force-app/main/default/objects/Provisioning__c/recordTypes/Sfax.recordType-meta.xml
<RecordType>
    <fullName>Sfax</fullName>
    <active>true</active>
    <description>sfax provisioning</description>
    <label>Sfax</label>
</RecordType>