force-app/main/default/objects/Provisioning__c/listViews/Completed_Requests.listView-meta.xml
<ListView>
    <fullName>Completed_Requests</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provisioning_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Requests</label>
    <language>en_US</language>
</ListView>