force-app/main/default/objects/Provisioning__c/listViews/New_Requests.listView-meta.xml
<ListView>
    <fullName>New_Requests</fullName>
    <columns>NAME</columns>
    <columns>Provisioning_Status__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provisioning_Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>New Requests</label>
    <language>en_US</language>
</ListView>